--- a/package.json
+++ b/package.json
@@ -11,19 +11,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@auth0/auth0-react": "^1.8.0",
     "axios": "^0.21.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.0.4",
     "mongoose": "^6.0.6"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Ahmadbanibaker/can-of-books-backend.git"
+    "url": "git+https://github.com/yousef-alramli/can-of-books-backend.git"
   },
   "bugs": {
-    "url": "https://github.com/Ahmadbanibaker/can-of-books-backend/issues"
+    "url": "https://github.com/yousef-alramli/can-of-books-backend/issues"
   },
-  "homepage": "https://github.com/Ahmadbanibaker/can-of-books-backend#readme"
+  "homepage": "https://github.com/yousef-alramli/can-of-books-backend#readme"
 }
